[package]
name = "prex_pp"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = { version = "1.36.0", features = ["serde-float"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-http = "3.9.0"
rust_dotenv = "0.1.0"
uuid = { version = "1.12.1", features = ["v4"] }
env_logger = "0.11.6"
log = "0.4.25"
celes = "2.5.0"
